Fix unwanted wrapping of a long message subject on the messages list in recent webkit browsers (#3)

--- a/mail.css
+++ b/mail.css
@@ -1457,7 +1457,6 @@ body.status-flagged .flag-icon {
 
 .widescreen .messagelist td.subject {
 	width: 99%;
-	white-space: wrap;
 	position: relative; /* for span.date positioning in Firefox */
 }
 
